--- a/4-payment-methods.html
+++ b/4-payment-methods.html
@@ -3,7 +3,10 @@
 <html>
 
     <head>
+        <meta charset="utf-8">
+        <title>Thomas Cheapsoft Technology (TCT)</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="images/tct-logo.ico">
     </head>
 
     <header>
