--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Thomas Cheapsoft Technology (TCT)</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style_home.css">
         <link rel="icon" href="images/tct-logo.ico">
     </head>
 
@@ -14,9 +14,11 @@
             <div class="topnav">
                 <table>
                     <tr>
+                        <td></td><td></td><td></td><td></td>
                         <td>
-                            <img src="images/tct-logo.png" class="tct-logo" alt="">
+                            <img src="images/tct-logo.png" class="tct-logo" href="index().html" alt="Mainpage">
                         </td>
+                        <td></td><td></td><td></td><td></td>
                         <td>
                             <a class="active" href="index.html">Home</a>
     
