--- a/payment-methods.html
+++ b/payment-methods.html
@@ -69,7 +69,7 @@
                                 </center>                
                             </div>
                             <h3><center>ShopeePay Wallet</center></h3>
-                            <h5>Username: <strong>tct_penang</strong> <br> Purpose (Optional): <strong>James Bond</strong></h5>
+                            <h5>Username: <strong>tct_penang</strong> <br> Purpose (Optional): <strong>YOUR NAME</strong></h5>
                         </div>
                     </td>
                     <td>
@@ -96,7 +96,7 @@
                                 </center>                
                             </div>
                             <h3><center>Touch 'n Go eWallet</center></h3>
-                            <h5>Who To Transfer: <strong>+60 174026354</strong> <br> Recipient Reference: <strong>James Bond</strong></h5>
+                            <h5>Who To Transfer: <strong>+60 174026354</strong> <br> Recipient Reference: <strong>YOUR NAME</strong></h5>
                             <h5></h5>
                         </div>
                     </td>
