--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Thomas Cheapsoft Technology (TCT)</title>
-        <link rel="stylesheet" href="style_home.css">
+        <link rel="stylesheet" href="style_index.css">
         <link rel="icon" href="images/tct-logo.ico">
     </head>
 
@@ -43,18 +43,63 @@
         </section>       
     </header>
 
-    <br>
-
     <body>
-        <div style="padding-left:16px">
-            <h2>Most Popular</h2>
-            <p>Navigation bar with a search box and a submit button inside of it.</p>
-            <p>Resize the browser window to see the responsive effect.</p>
-        </div>
+        <h1><center>Delivery & Courier Services</center></h1>
 
+        <br>
 
+        <center>
+            <img src="images/tct-delivery-man.png" alt="TCT Delivery & Courier Services" width="250px">
+        </center>
+       
+        <br>
 
+        <center>
+            <table>
+                <tr>
+                    <td>
+                        <div class="courier-services">
+                            <br>
+                            <div class="ecommerce-platforms-images">
+                                <center>
+                                    <img src="images/shopee-logo.png" alt="Boost e-Wallet" height="100px">
+                                </center>                
+                            </div>
+                            <h3><center>Shopee Platform</center></h3>
+                            <h5><center>J&T Express</center> <br> <center>Pos Laju</center></h5>
+                            <!-- <h5>Username: <strong>tct_penang</strong> <br> Purpose (Optional): <strong>James Bond</strong></h5> -->
+                        </div>
+                    </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>
+                        <div class="courier-services">
+                            <br>
+                            <div class="ecommerce-platforms-images">
+                                <center>
+                                    <img src="images/lazada-logo.png" alt="Boost e-Wallet" height="100px">
+                                </center>                
+                            </div>
+                            <h3><center>Lazada Platform</center></h3>
+                            <h5><center>LEL Express (LEX)</center></h5>
+                            <!-- <h5>Username: <strong>tct_penang</strong> <br> Purpose (Optional): <strong>James Bond</strong></h5> -->
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </center>
 
+        <br>
+
+        <h4><center>INSTANT DELIVERY</center></h4>
+
+        <center>
+            <p style="color: white">All items we sell are ready-stock.</p>
+        </center>
+
+        <br>
     </body>
 
 </html>
