--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 </center>                
                             </div>
                             <h3><center>Shopee Platform</center></h3>
-                            <h5><center>J&T Express</center> <br> <center>Pos Laju</center></h5>
+                            <h5><center>J&T Express</center> <br> <center>NinjaVan</center> <br> <center>Pos Laju</center></h5>
                             <!-- <h5>Username: <strong>tct_penang</strong> <br> Purpose (Optional): <strong>James Bond</strong></h5> -->
                         </div>
                     </td>
@@ -83,7 +83,7 @@
                                 </center>                
                             </div>
                             <h3><center>Lazada Platform</center></h3>
-                            <h5><center>LEL Express (LEX)</center></h5>
+                            <h5><center>LEL Express (LEX)</center> <br> <center>J&T Express</center> <br> <center>NinjaVan</center> <br> <center>Pos Laju</center></h5>
                             <!-- <h5>Username: <strong>tct_penang</strong> <br> Purpose (Optional): <strong>James Bond</strong></h5> -->
                         </div>
                     </td>
