--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
     </header>
 
     <body>
-        <h1><center>Best Deals</center></h1>
+        <h1><center>Best Deals (Coming Soon)</center></h1>
 
         
 
