--- a/about-us.html
+++ b/about-us.html
@@ -58,6 +58,8 @@
 
         <br>
 
+		<link href='https://fonts.googleapis.com/css?family=League Spartan' rel='stylesheet'>
+
         <table>
             <tr>
                 <td>
