--- a/about-us.html
+++ b/about-us.html
@@ -114,11 +114,13 @@
                         </table>
                     </div>
                 </td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+            </tr>
+        </table>
+
+        <br>
+
+        <table>
+            <tr>
                 <td>
                     <div id="lazada-grid-container">
                         <table>
