--- a/products.html
+++ b/products.html
@@ -29,7 +29,7 @@
                                 </button>
                                 <div class="dropdown-content">
                                     <a href="payment-methods.html">Payment Methods</a>
-                                    <a class="active" href="about-us.html">About Us</a>
+                                    <a href="about-us.html">About Us</a>
                                 </div>
                             </div>
                         </td>
@@ -40,9 +40,9 @@
     </header>
 
     <body>
-        <h1><center>Best Deals (Coming Soon)</center></h1>
+        <h1><center>Best Deals</center></h1>
 
-        
+       
 
     </body>
 
