--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
 
         <!-- CSS -->
         <link href="bootstrap-5.2.3-examples\bootstrap-5.2.3-examples\assets\dist\css\bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="yottasoft_style.css">
+        <link rel="stylesheet" href="style_tct.css">
         <!--  -->
         <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/pricing/">
                             <!-- Honeycombs -->
@@ -21,7 +21,7 @@
     
         <!-- JavaScript -->
         <script src="bootstrap-5.2.3-examples\bootstrap-5.2.3-examples\assets\dist\jsbootstrap.bundle.min.js"></script>
-        <script src="yottasoft_script.js"></script>
+        <script src="script_tct.js"></script>
     </head>
 
     <!-- NAVIGATION -->
