--- a/services.html
+++ b/services.html
@@ -15,8 +15,6 @@
         <link rel="stylesheet" href="style_tct.css">
         <!--  -->
         <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/pricing/">
-                            <!-- Honeycombs -->
-        <link rel="stylesheet" type="text/css" href="honeycombs.css">
         <link href='https://fonts.googleapis.com/css?family=Bebas Neue' rel='stylesheet'>
     
         <!-- JavaScript -->
@@ -32,9 +30,9 @@
       
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="index.html" class="nav-link px-2 text-light">Home</a></li>
-                    <li><a href="services.html" class="nav-link px-2 text-light">Services</a></li>
+                    <li><a href="services.html" class="nav-link px-2 text-warning">Services</a></li>
                     <li><a href="products.html" class="nav-link px-2 text-light">Products</a></li>
-                    <li><a href="payment-methods.html" class="nav-link px-2 text-warning">Payment</a></li>
+                    <li><a href="payment-methods.html" class="nav-link px-2 text-light">Payment</a></li>
                     <li><a href="frequently-asked-questions.html" class="nav-link px-2 text-light">FAQs</a></li>
                     <li><a href="about-us.html" class="nav-link px-2 text-light">About</a></li>
                 </ul>
