--- a/services.html
+++ b/services.html
@@ -128,7 +128,7 @@
                         <center>
                             <table>
                                 <tr>
-                                    <td><h5>Software available:</h5></td>
+                                    <td><h5>Windows Software available:</h5></td>
                                 </tr>
                                 <tr>
                                     <td>• Microsoft [MS Office]</td>
