--- a/services.html
+++ b/services.html
@@ -32,9 +32,9 @@
                     <li><a href="index.html" class="nav-link px-2 text-light">Home</a></li>
                     <li><a href="services.html" class="nav-link px-2 text-warning">Services</a></li>
                     <li><a href="products.html" class="nav-link px-2 text-light">Products</a></li>
-                    <li><a href="payment-methods.html" class="nav-link px-2 text-light">Payment</a></li>
-                    <li><a href="frequently-asked-questions.html" class="nav-link px-2 text-light">FAQs</a></li>
-                    <li><a href="about-us.html" class="nav-link px-2 text-light">About</a></li>
+                    <li><a href="payment-methods.html" class="nav-link px-2 text-light">Payment-Methods</a></li>
+                    <li><a href="faqs.html" class="nav-link px-2 text-light">FAQs</a></li>
+                    <li><a href="about-us.html" class="nav-link px-2 text-light">About-Us</a></li>
                 </ul>
       
                 <div class="text-end">
@@ -55,7 +55,7 @@
     </div>
 
     <body>
-        <div class="payment_pricing_div row  row-cols-md-3 mb-3 text-center">
+        <div class="services_package_div row row-cols-md-3 mb-3 text-center">
             <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm">
                     <div class="card-header py-3 text-bg-success border-primary">
@@ -118,7 +118,7 @@
 
             <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm">
-                    <div class="card-header py-3 text-bg-success border-primary"">
+                    <div class="card-header py-3 text-bg-success border-primary">
                         <h4 class="my-0 fw-normal text-light">Computer Software</h4>
                         <h5 class="my-0 fw-normal text-light">Installation Services</h5>
                     </div>
@@ -324,7 +324,7 @@
 
             <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm">
-                    <div class="card-header py-3 text-bg-success border-primary"">
+                    <div class="card-header py-3 text-bg-success border-primary">
                         <h4 class="my-0 fw-normal text-light">Mouse Button</h4>
                         <h5 class="my-0 fw-normal text-light">Replacement Services</h5>
                     </div>
@@ -467,16 +467,15 @@
 
     <footer>
         <div class="b-example-divider"></div>
-
             <div class="container">
                 <footer class="py-3 my-4">
                     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                         <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
                         <li class="nav-item"><a href="services.html" class="nav-link px-2 text-muted">Services</a></li>
                         <li class="nav-item"><a href="products.html" class="nav-link px-2 text-muted">Products</a></li>
-                        <li class="nav-item"><a href="payment-methods.html" class="nav-link px-2 text-muted">Payment</a></li>
-                        <li class="nav-item"><a href="frequently_asked-questions.html" class="nav-link px-2 text-muted">FAQs</a></li>
-                        <li class="nav-item"><a href="about-us.html" class="nav-link px-2 text-muted">About</a></li>
+                        <li class="nav-item"><a href="payment-methods.html" class="nav-link px-2 text-muted">Payment-Methods</a></li>
+                        <li class="nav-item"><a href="faqs.html" class="nav-link px-2 text-muted">FAQs</a></li>
+                        <li class="nav-item"><a href="about-us.html" class="nav-link px-2 text-muted">About-Us</a></li>
                     </ul>
 
                     <center><img id="yt-logo-footer" src="images/tct-logo.png" alt="Yottasoft Technology" height="125"></center>
@@ -486,6 +485,5 @@
                     <p class="text-center">All rights reserved.</p>
                 </footer>
             </div>
-            
     </footer>
 </html>
