--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Thomas Cheapsoft Technology (TCT)</title>
-        <link rel="stylesheet" href="style_about-us.css">
+        <link rel="stylesheet" href="style_about-us_old.css">
         <link rel="icon" href="images/tct-logo.ico">
     </head>
 
@@ -31,7 +31,7 @@
                                   <i class="fa fa-caret-down"></i>
                                 </button>
                                 <div class="dropdown-content">
-                                    <a href="payment-methods.html">Payment Methods</a>
+                                    <a href="payment.html">Payment Methods</a>
                                     <a class="active" href="about-us.html">About Us</a>
                                 </div>
                             </div>
