--- a/products.html
+++ b/products.html
@@ -58,7 +58,9 @@
         </center>    
     </div>
 
-    <br><br><br><br><br>
+    <center>
+        <img src="images/product-categories.png" alt="Product Categories" height="888px">
+    </center>
 
     </body>
 
