--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Thomas Cheapsoft Technology (TCT)</title>
-        <link rel="stylesheet" href="style_about-us_old.css">
+        <link rel="stylesheet" href="style_about-us.css">
         <link rel="icon" href="images/tct-logo.ico">
     </head>
 
