--- a/services.html
+++ b/services.html
@@ -45,8 +45,8 @@
             </div>
         </div>
     </header>
-    
-    <br>    
+
+    <br>
 
     <div class="pageTitle_description_div">
         <center><h1 class="display-6 fw-normal">Pick your preferred TCT Services</h1></center>
@@ -112,8 +112,8 @@
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>✔️ Student Price</li>
                             <h5 class="fw-bold">from MYR 34.88</h5>
-                        </ul>                        
-                        <button type="button" class="w-100 btn btn-lg btn-success text-light">Negotiate now</button>
+                        </ul>
+                        <a href="https://wa.link/vcizre" type="button" class="w-100 btn btn-lg btn-success" target="_blank">Negotiate now</a>
                     </div>
                 </div>
             </div>
@@ -188,7 +188,7 @@
                             <li>✔️ Student Price</li>
                             <h5 class="fw-bold">from MYR 12.88</h5>
                         </ul>                        
-                        <button type="button" class="w-100 btn btn-lg btn-success text-light">Negotiate now</button>
+                        <a href="https://wa.link/0dw5ow" type="button" class="w-100 btn btn-lg btn-success" target="_blank">Negotiate now</a>
                     </div>
                 </div>
             </div>
@@ -217,19 +217,15 @@
                                 </tr>
                                 <tr>
                                     <td>• Electrical Control Panel Building & Installation for Manufacturing Plant</td>
-                                </tr>
-                                <!-- <tr>
-                                    <td>• Machinery Installation with Electrical Planning</td>
-                                </tr> -->
-                                <tr>
-                                    <td>• Cabling & Wiring</td>
-                                </tr>
+                                </tr>   
                                 <tr>
                                     <td>and many more ...</td>
                                 </tr>
                             </table>
                         </center>
                         <br>
+                        <img src="images/plc-omron-mitsubishi.png" alt="Omron PLC VS Mitsubishi PLC" height="150px">
+                        <br><br>
                         <center>
                             <table>
                                 <tr>
@@ -254,7 +250,7 @@
                             <li>K.B. Electrical (Boon):</li>
                             <li>(+60) 12 484 9898</li>
                         </ul>
-                        <a href="https://www.paypal.com/myaccount/transfer/" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Negotiate now</a>
+                        <a href="https://wa.link/28ytnh" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Negotiate now</a>
                     </div>
                 </div>
                 <!-- 2.5% international transfer charge fee -->
@@ -320,7 +316,7 @@
                             <li>✔️ Student Price</li>
                             <h5 class="fw-bold">MYR 8.88</h5>
                         </ul>
-                        <button type="button" class="w-100 btn btn-lg btn-outline-success">Order now</button>
+                        <a href="https://wa.link/vkklew" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Reserve now</a>
                     </div>
                 </div>
             </div>
@@ -406,7 +402,7 @@
                             <li>✔️ Student Price</li>
                             <h5 class="fw-bold">MYR 8.88</h5>
                         </ul>
-                        <button type="button" class="w-100 btn btn-lg btn-outline-success">Order now</button>
+                        <a href="https://wa.link/lmomif" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Order now</a>
                     </div>
                 </div>
             </div>
@@ -420,7 +416,7 @@
                     <div class="card-body">
                         <img src="images/logitech-Z407-bluetooth-computer-speakers-with-subwoofer-and-wireless-control.png" alt="Computer Speakers" height="100px">
                         <br><br>
-                        <img src="images/speaker-damaged-vs-new.png" alt="Damaged Speaker VS New Speaker" height="180px">
+                        <img src="images/speaker-damaged-vs-new.png" alt="Damaged Speaker VS New Speaker" height="150px">
                         <br><br>
                         
                         <center>
@@ -460,7 +456,7 @@
                             <li>✔️ Student Price</li>
                             <h5 class="fw-bold">MYR 8.88</h5>
                         </ul>
-                        <a href="https://www.paypal.com/myaccount/transfer/" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Order now</a>
+                        <a href="https://wa.link/7zg283" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Order now</a>
                     </div>
                 </div>
                 <!-- 2.5% international transfer charge fee -->
