--- a/services.html
+++ b/services.html
@@ -315,6 +315,7 @@
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>✔️ Student Price</li>
                             <h5 class="fw-bold">MYR 8.88</h5>
+                            <p>[The price of the RAM component is not included.]</p>
                         </ul>
                         <a href="https://wa.link/vkklew" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Reserve now</a>
                     </div>
@@ -401,6 +402,7 @@
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>✔️ Student Price</li>
                             <h5 class="fw-bold">MYR 8.88</h5>
+                            <p>[The price of the microswitch component is not included.]</p>
                         </ul>
                         <a href="https://wa.link/lmomif" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Order now</a>
                     </div>
@@ -455,6 +457,7 @@
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>✔️ Student Price</li>
                             <h5 class="fw-bold">MYR 8.88</h5>
+                            <p>[The price of the speakers are not included.]</p>
                         </ul>
                         <a href="https://wa.link/7zg283" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Order now</a>
                     </div>
