--- a/services.html
+++ b/services.html
@@ -51,9 +51,7 @@
     <div class="pageTitle_description_div">
         <center><h1 class="display-6 fw-normal">Pick your preferred TCT Services</h1></center>
         <center>
-            <p class="fs-5 text-muted">
-                All service details are clearly stated below.
-            </p>
+            <p class="fs-5 text-muted">All service details are clearly stated below.</p>
         </center>    
     </div>
 
@@ -224,7 +222,8 @@
                             </table>
                         </center>
                         <br>
-                        <img src="images/plc-omron-mitsubishi.png" alt="Omron PLC VS Mitsubishi PLC" height="150px">
+                        <img src="images/plc-omron-mitsubishi.png" alt="Omron PLC VS Mitsubishi PLC" width="220px">
+                        <!-- 178 -->
                         <br><br>
                         <center>
                             <table>
@@ -418,7 +417,7 @@
                     <div class="card-body">
                         <img src="images/logitech-Z407-bluetooth-computer-speakers-with-subwoofer-and-wireless-control.png" alt="Computer Speakers" height="100px">
                         <br><br>
-                        <img src="images/speaker-damaged-vs-new.png" alt="Damaged Speaker VS New Speaker" height="150px">
+                        <img src="images/speaker-damaged-vs-new.png" alt="Damaged Speaker VS New Speaker" width="220px">
                         <br><br>
                         
                         <center>
