--- a/services.html
+++ b/services.html
@@ -93,8 +93,7 @@
                                 </tr>
                             </table>
                         </center>
-                        <br>
-                        <p>Working Days: < 7 days</p>
+                        <br>                        
                         <center>
                             <table>
                                 <tr>
@@ -104,19 +103,22 @@
                                     <td>• TAR UMT Penang Branch Campus</td>
                                 </tr>
                                 <tr>
-                                    <td>• Penang (Mainland & Island) - [Additional transportation expenses is required.]</td>
+                                    <td>• Penang (Mainland & Island) - [Additional pick-up transportation expenses is required.]</td>
                                 </tr>
                                 <tr>
-                                    <td>• Kedah (Southern Region) - [Additional transportation expenses is required.]</td>
+                                    <td>• Kedah (Southern Region) - [Additional pick-up transportation expenses is required.]</td>
                                 </tr>
                             </table>
                         </center>
+                        <br>
+                        <p>Working Days: < 7 days</p>
+                        <p>✔️ Special Student Price</p>
                         <br><br>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>✔️ Student Price</li>
+                            <li>Service Charge</li>
                             <h5 class="fw-bold">from MYR 34.88</h5>
                         </ul>
-                        <a href="https://wa.link/vcizre" type="button" class="w-100 btn btn-lg btn-success" target="_blank">Negotiate now</a>
+                        <a href="https://wa.link/vcizre" type="button" class="w-100 btn btn-lg btn-success" target="_blank">Reserve now</a>
                     </div>
                 </div>         
             </div>
@@ -172,7 +174,7 @@
                             </table>
                         </center>
                         <br>
-                        <p>Working Days: < 1 hour</p>
+                        
                         <center>
                             <table>
                                 <tr>
@@ -186,12 +188,15 @@
                                 </tr>                                
                             </table>
                         </center>
+                        <br>
+                        <p>Working Days: < 1 hour</p>
+                        <p>✔️ Special Student Price</p>
                         <br><br>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>✔️ Student Price</li>
+                            <li>Service Charge</li>
                             <h5 class="fw-bold">from MYR 12.88</h5>
                         </ul>                        
-                        <a href="https://wa.link/0dw5ow" type="button" class="w-100 btn btn-lg btn-success" target="_blank">Negotiate now</a>
+                        <a href="https://wa.link/0dw5ow" type="button" class="w-100 btn btn-lg btn-success" target="_blank">Reserve now</a>
                     </div>
                 </div>
             </div>
@@ -315,9 +320,10 @@
                         </center>
                         <br>
                         <p>Working Days: < 1 hour</p>
+                        <p>✔️ Special Student Price</p>
                         <br><br>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>✔️ Student Price</li>
+                            <li>Labour Fee</li>
                             <h5 class="fw-bold">MYR 8.88</h5>
                             <p>[The price of the RAM component is not included.]</p>
                         </ul>
@@ -403,11 +409,12 @@
                         </center>
                         <br>
                         <p>Working Days: < 7 days</p>
+                        <p>✔️ Special Student Price</p>
                         <br><br>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>✔️ Student Price</li>
-                            <h5 class="fw-bold">MYR 8.88</h5>
-                            <p>[The price of the microswitch component is not included.]</p>
+                            <li>Labour Fee</li>
+                            <h5 class="fw-bold">from MYR 8.88</h5>
+                            <p>[The price of the new microswitch component is not included.]</p>
                         </ul>
                         <a href="https://wa.link/lmomif" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Order now</a>
                     </div>
@@ -439,7 +446,7 @@
                                     <td>2) Checking the details of the damaged speakers.</td>
                                 </tr>
                                 <tr>
-                                    <td>3) Dropping an order for the new speaker from mainland China supplier.</td>
+                                    <td>3) Dropping an order for the new speaker from mainland China supplier by us.</td>
                                 </tr>
                                 <tr>
                                     <td>4) Soldering the new speakers completed with electrical circuit using soldering iron.</td>
@@ -459,11 +466,12 @@
                         </center>
                         <br>
                         <p>Business Hours: < 7 days (counts from the moment of new speakers arrives)</p>
+                        <p>✔️ Special Student Price</p>
                         <br><br>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>✔️ Student Price</li>
-                            <h5 class="fw-bold">MYR 8.88</h5>
-                            <p>[The price of the speakers are not included.]</p>
+                            <li>Labour Fee</li>
+                            <h5 class="fw-bold">from MYR 8.88</h5>
+                            <p>[The price of the new speakers are not included.]</p>
                         </ul>
                         <a href="https://wa.link/7zg283" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Order now</a>
                     </div>
