--- a/services.html
+++ b/services.html
@@ -196,7 +196,7 @@
                             <li>Service Charge</li>
                             <h5 class="fw-bold">from MYR 12.88</h5>
                         </ul>                        
-                        <a href="https://wa.link/0dw5ow" type="button" class="w-100 btn btn-lg btn-success" target="_blank">Reserve now</a>
+                        <a href="https://wa.link/0dw5ow" type="button" class="w-100 btn btn-lg btn-success" target="_blank">Negotiate now</a>
                     </div>
                 </div>
             </div>
@@ -260,7 +260,7 @@
                             <li>K.B. Electrical (Boon):</li>
                             <li>(+60) 12 484 9898</li>
                         </ul>
-                        <a href="https://wa.link/28ytnh" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Negotiate now</a>
+                        <a href="https://wa.link/28ytnh" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Consult now</a>
                     </div>
                 </div>
             </div>
