--- a/services.html
+++ b/services.html
@@ -495,7 +495,7 @@
                         <h5 class="my-0 fw-normal text-light">Replacement Services</h5>
                     </div>
                     <div class="card-body">
-                        <img src="images/casio.png" alt="Energizer" height="100px">
+                        <img src="images/casio.png" alt="Casio Scientific Calculators" height="100px">
                         <br><br>
                         <table>
                             <tr>
@@ -510,7 +510,7 @@
                             </tr>
                         </table>
                         <br>
-                        <img src="images/panasonic-energizer.png" alt="Panasonic" height="100px">
+                        <img src="images/panasonic-energizer.png" alt="Panasonic & Energizer" height="100px">
                         <br><br>
                         <h5 class="subtitle_h5">Alkaline Battery Details</h5>
                         <table class="border_table">
@@ -580,7 +580,7 @@
                             <h5 class="fw-bold">MYR 3.88</h5>
                             <p>[The price of the new alkaline battery is included.]</p>
                         </ul>
-                        <a href="https://wa.link/vkklew" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Reserve now</a>
+                        <a href="https://wa.link/yrkr8a" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Reserve now</a>
                     </div>
                 </div>
             </div>
@@ -659,7 +659,7 @@
                             <h5 class="fw-bold">MYR 3.88</h5>
                             <p>[The price of the new alkaline battery is included.]</p>
                         </ul>
-                        <a href="https://wa.link/lmomif" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Reserve now</a>
+                        <a href="https://wa.link/af656r" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Reserve now</a>
                     </div>
                 </div>
             </div>
@@ -672,9 +672,9 @@
                         <h5 class="my-0 fw-normal text-light">Maintenance Services</h5>
                     </div>
                     <div class="card-body">
-                        <img src="images/pilot.png" alt="Pilot" height="100px">
+                        <img src="images/pilot.png" alt="Pilot Japan" height="100px">
                         <br><br>
-                        <img src="images/mechanical-pencil.png" alt="Damaged Speaker VS New Speaker" width="220px">
+                        <img src="images/mechanical-pencil.png" alt="Pilot Mechanical Pencil" width="220px">
                         <br><br>
                         <table>
                             <tr>
@@ -710,7 +710,7 @@
                             <li>Repair Labour Fee</li>
                             <h5 class="fw-bold">from MYR 2.88</h5>
                         </ul>
-                        <a href="https://wa.link/7zg283" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Reserve now</a>
+                        <a href="https://wa.link/vi7czm" type="button" class="w-100 btn btn-lg btn-outline-success" target="_blank">Reserve now</a>
                     </div>
                 </div>
             </div>
