--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
                 </ul>
       
                 <div class="text-end">
-                    <button type="button" class="btn btn-outline-light me-2">WhatsApp</button>
+                    <button type="button" class="btn btn-outline-light me-2">WhatsApp Inquiry</button>
                     <button type="button" class="btn btn-warning">Share Now</button>
                 </div>
             </div>
