--- a/about-us.html
+++ b/about-us.html
@@ -65,7 +65,7 @@
                     alt="Thomas Cheapsoft Technology" 
                     style="margin-bottom: 18px;">
                 <h3 class="fs-5 highlightNone"
-                    style="color: #d9a21b">
+                    style="color: #d9a21b;">
                     Speedy | Reliable | Affordable 
                 </h3>
 
