--- a/about-us.html
+++ b/about-us.html
@@ -63,7 +63,7 @@
                 <div style="border: 5px solid #d9a21b; padding: 15px 70px; border-radius: 28px; width: auto; display: inline-block; text-align: center;">
                     <img src="images/tct-full-logo-blue.png" 
                         id="tct-full-logo" 
-                        alt="Thomas Cheapsoft Technology"
+                        alt="Thomas Comonics Technology"
                         style="margin-bottom: 18px;">
                     <h3 class="fs-5 highlightNone"
                         style="color: #d9a21b;">
