--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
                     <img src="images/lselectric-logo.png" alt="LS Electric" title="LS Electric">
                 </div>
             </div>
+            
+            <center>
+                <p class="fs-5 text-muted">and many more...</p>
+            </center>
         </div>
         <br class="highlightNone">
 
